BUG: Fixed a misalignment in collection panel shells introduced in r5080. Added CSS to revert this change in the legacy_styling plugin.
git-svn-id: http://svn.montala.net/svn/resourcespace@5096 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -110,7 +110,7 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 
 .CollectionPanelShell {padding:0;float: left;margin: 0px 15px 5px 0px;width: 97px;height: 120px;}
 .CollectionPanelInfo{}
-.CollectionResourceAlign {width:77px;height:85px;text-align: center;vertical-align: middle;}
+.CollectionResourceAlign {width:97px;height:85px;text-align: center;vertical-align: middle;}
 
 #CollectionMinTitle{float: left;margin: 4px 10px 0px 25px;}
 #CollectionMinDropTitle{float: left;padding:0.2em 0em;margin-top: 5px;}
